--- a/src/app/home/widgets/jogos-aovivo/jogos-aovivo.component.html
+++ b/src/app/home/widgets/jogos-aovivo/jogos-aovivo.component.html
@@ -76,7 +76,8 @@
                                             <div class="cotacao"
                                             (click)="addCotacao(jogo.value, cotacao); $event.stopPropagation()" [ngClass]="{'selecionado': oddSelecionada(jogo.value._id, cotacao.chave)}">
                                                 <label
-                                                 [ngClass]="{'odd-up': cotacao.oddChange == 'up', 'odd-down': cotacao.oddChange == 'down'}"
+                                                 id="{{sanitazerId(jogo.value._id + cotacao.chave)}}"
+                                                 [ngClass]="getOddChangeClass(sanitazerId(jogo.value._id + cotacao.chave), cotacao.price_change)"
                                                 >
                                                 {{ cotacao.nome }}</label>
                                                 <span>{{ cotacao.valorFinal}}</span>
