--- a/src/app/esportes/live/jogo/live-jogo.component.css
+++ b/src/app/esportes/live/jogo/live-jogo.component.css
@@ -533,6 +533,10 @@ section.jogo {
     animation: blink 1s infinite;
 }
 
+.inner-odd.odd-enabled {
+    position: relative;
+}
+
 .inner-odd.odd-enabled.selecionado {
     .odd-down::before {
         display: none;
