--- a/src/app/betby/betby.component.html
+++ b/src/app/betby/betby.component.html
@@ -1,4 +1,6 @@
-<main>
+<app-header></app-header>
+<main [ngStyle]="{ 'padding-top.px': heightHeader }">
     <div id="betby"></div>
 </main>
+<app-footer></app-footer>
 
