--- a/src/app/esportes/live/listagem/live-listagem.component.html
+++ b/src/app/esportes/live/listagem/live-listagem.component.html
@@ -246,10 +246,10 @@
                                                      (click)="addCotacao(jogo.value, cotacao); $event.stopPropagation()"
                                                      [ngClass]="{'selecionado': oddSelecionada(jogo.value._id, cotacao.chave)}">
                                                     <label
-                                                     id="{{sanitazerId(jogo.value.id + cotacao.chave)}}"
-                                                     [ngClass]="getOddChangeClass(sanitazerId(jogo.value.id + cotacao.chave), cotacao.price_change)"
+                                                     [ngClass]="getOddChangeClass(cotacao.price_change)"
                                                     >
-                                                        {{ cotacao.nome }}</label>
+                                                        {{ cotacao.nome }}
+                                                    </label>
                                                     <span>{{ cotacao.valorFinal}}</span>
                                                 </div>
                                             </ng-template>
