fix: aumenta tempo para ocultar iconechat e ajusta scroll na pagina betby

--- a/src/styles.css
+++ b/src/styles.css
@@ -66,6 +66,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     color: var(--foreground);
     background-color: var(--background);
+    width: 100%
 }
 
 .base-container {
