--- a/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
+++ b/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
@@ -37,7 +37,9 @@
                                 </div>
                             </section>
                             <section id="withdrawal-details">
-                                <h3 class="hide-mobile">{{'saques.withdrawalDetails' | translate}}</h3>
+                                <div class="withdrawal-details-title">
+                                    <h3 class="hide-mobile">{{'saques.withdrawalDetails' | translate}}</h3>
+                                </div>
                                 <div id="details-wrapper">
                                     <div class="details-container">
                                         <div class="details-available-amount">
@@ -153,7 +155,7 @@
                                                     class="btn"
                                                     (click)="changeAmount(value)"
                                                 >
-                                                    +{{ value }}
+                                                   <p>R$</p> <p>{{ value }}</p>
                                                 </button>
                                             </div>
                                         </div>
