--- a/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
+++ b/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
@@ -155,7 +155,7 @@
                                                     class="btn"
                                                     (click)="changeAmount(value)"
                                                 >
-                                                   <p>R$</p> <p>{{ value }}</p>
+                                                   +{{ value }}
                                                 </button>
                                             </div>
                                         </div>
