--- a/src/app/clientes/deposito/pix/deposito-pix.component.html
+++ b/src/app/clientes/deposito/pix/deposito-pix.component.html
@@ -68,7 +68,7 @@
                                     class="btn"
                                     (click)="changeAmount(value)"
                                 >
-                                    <p>R$</p> <p>{{ value }}</p> 
+                                    +{{ value }} 
                                 </button>
                             </div>
                         </div>
