--- a/src/app/casino/wall/wall.component.css
+++ b/src/app/casino/wall/wall.component.css
@@ -33,8 +33,8 @@
 
 .game-grid {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* Define as colunas automáticas com um mínimo de 150px e ocupando toda a largura disponível */
-    gap: 15px 12px;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); /* Define as colunas automáticas com um mínimo de 150px e ocupando toda a largura disponível */
+    gap: 1.25rem 0.75rem;
 }
 
 .game-grid::-webkit-scrollbar {
@@ -179,6 +179,9 @@
     gap: 24px;
 }
 
+.blocoGameList{
+    padding: 0 0 24px 10px !important;
+}
 @media only screen and (max-width: 1024px) {
     .wall-container {
         height: -webkit-fill-available;
@@ -313,7 +316,6 @@
 }
 
 @media only screen and (min-width: 1025px) {
-    .game-list,
     .game-grid,
     .provider-list {
         gap: 15px;
