--- a/src/app/casino/wall/wall.component.html
+++ b/src/app/casino/wall/wall.component.html
@@ -69,7 +69,7 @@
 
         <div class="wall-inner" *ngIf="isHomeCassino; else cassinoGameList">
             <ng-container *ngFor="let section of gamesSection">
-                <div class="bloco" *ngIf="section.show">
+                <div class="bloco blocoGameList" *ngIf="section.show">
                     <app-wall-section
                         [sectionId]="section.id"
                         [title]="section.title"
@@ -94,7 +94,6 @@
 
                                 />
                             </div>
-                            <div class="more-games-fade more-games-fade-right" id="{{ section.id }}-fade-right" *ngIf="section.gameList.length > 2"></div>
                         </ng-container>
                         <ng-template #elseWithoutGames>
                             <span class="empty-game-list">{{ 'geral.nenhumJogoDisponivel' | translate }}</span>
