--- a/src/app/casino/wall/wall.component.css
+++ b/src/app/casino/wall/wall.component.css
@@ -315,15 +315,18 @@
     }
 }
 
+@media only screen and (min-width: 768px) and (max-width: 1279px){
+    .bloco > .game-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+        gap: 1.25rem .75rem;
+    }
+}
+
 @media only screen and (min-width: 1025px) {
     .game-grid,
     .provider-list {
         gap: 15px;
-    }
-
-    .bloco > .game-grid {
-        gap: 15px 10px;
-        grid-template-columns: repeat(6, 1fr);
     }
 
     .content-modal-fornecedores{
