--- a/src/app/shared/layout/header/header.component.css
+++ b/src/app/shared/layout/header/header.component.css
@@ -530,8 +530,9 @@ body .change-theme {
     }
 
     .header {
+        padding-top: 15px;
         width: 100%;
-        height: 64px;
+        height: 42px;
         display: flex;
     }
 
@@ -848,6 +849,13 @@ body .change-theme {
         width: 270px;
     }
 }
+
+@media screen and (min-width: 1366px) and (max-width: 1400px) {
+    .container-group{
+        margin-left: 20px;
+    }
+}
+
 
 .info-connection-card {
     display: block;
