--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -741,7 +741,7 @@
                 <span>{{ 'menu.loteria' | translate }}</span>
             </a>
         </div>
-        <div class="category" *ngIf="paginaPromocaoHabilitado">
+        <div class="category" *ngIf="paginaPromocaoHabilitado && showHeaderMobile">
             <a [routerLink]="['/promocao']" routerLinkActive="active">
                 <span>{{ 'menu.promocao' | translate }}</span>
             </a>
