--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -50,7 +50,7 @@
             <img [src]="LOGO" class="logo">
         </a>
     </div>
-    <div>
+    <div class="center">
         <nav class="desktop" *ngIf="!showHeaderMobile" #scrollMenu>
             <ng-container *ngTemplateOutlet="menuTemplate"></ng-container>
         </nav>
