--- a/src/app/casino/wall/components/wall-games-search/wall-games-search.component.scss
+++ b/src/app/casino/wall/components/wall-games-search/wall-games-search.component.scss
@@ -21,6 +21,7 @@
         justify-content: space-between;
         align-items: center;
         gap: 15px;
+        margin-right: 10px;
     }
 
     &__content {
@@ -181,6 +182,13 @@
         gap: 10px;
     }
 }
+@media only screen and (min-width: 769px) and (max-width: 1279px){
+    .games-search {
+        &__header {
+            margin-right: 16px;
+        }
+    }
+}
 
 @media only screen and (min-width: 667px) {
     .featured-games__body {
@@ -266,5 +274,13 @@
     .search-results__list {
         grid-template-columns: repeat(6, 1fr);
         gap: 15px;
+    }
+}
+
+@media only screen and (min-width: 1280px) {
+    .games-search {
+        &__header {
+            margin-right: 18px;
+        }
     }
 }
