--- a/src/app/casino/wall/components/wall-section/wall-section.component.css
+++ b/src/app/casino/wall/components/wall-section/wall-section.component.css
@@ -64,6 +64,13 @@
     transition: 500ms;
 }
 
+
+@media only screen and (min-width: 769px) and (max-width: 1279px){
+    .wall-section__see-all {
+        padding-right: 16px;
+    }
+}
+
 @media only screen and (min-width: 1024px) {
     .wall-section {
         margin-bottom: 18px;
@@ -78,5 +85,11 @@
         width: 24px;
         height: 24px;
         font-size: 18px;
+    }
+}
+
+@media only screen and (min-width: 1280px) {
+    .wall-section__see-all {
+        padding-right: 18px;
     }
 }
