--- a/src/app/casino/wall/wall.component.css
+++ b/src/app/casino/wall/wall.component.css
@@ -53,6 +53,8 @@
     flex-wrap: wrap;
     -ms-overflow-style: none;
     scrollbar-width: none; 
+    padding-left: 18px;
+    margin-left: -18px;
 }
 
 .game-list::-webkit-scrollbar {
@@ -217,6 +219,8 @@
         flex-wrap: nowrap;
         overflow: scroll;
         scroll-behavior: smooth;
+        padding-left: 16px;
+        margin-left: -16px;
     }
 
     .provider-list {
