Fix: correção mensagem de erro campo alterar senha quebrando

--- a/src/app/meu-perfil/alterar-senha.component.css
+++ b/src/app/meu-perfil/alterar-senha.component.css
@@ -50,3 +50,9 @@ label {
         justify-content: center;
     }
 }
+
+@media only screen and (max-width: 768px){
+    .content-header{
+        margin: 8px 0;
+    }   
+}
