--- a/src/app/esportes/generico/basquete-jogo/basquete-jogo.component.css
+++ b/src/app/esportes/generico/basquete-jogo/basquete-jogo.component.css
@@ -369,6 +369,30 @@
         flex-direction: column;
         align-items: center;
     }
+
+    .wrap-sticky {
+        padding: 0;
+    }
+    
+    .content-sports.inside-event {
+        padding-top: 0;
+    }
+
+    .iframe-responsive {
+        max-width: 100%;
+        padding-top: 64%;
+        position: relative;
+        width: 100%;
+        margin-bottom: 5px;
+    }
+
+    .iframe-responsive iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: calc(100%);
+        height: 100%;
+    }
 }
 
 @media only screen and (min-width: 1025px) {
