--- a/src/app/shared/layout/header/header.component.css
+++ b/src/app/shared/layout/header/header.component.css
@@ -114,7 +114,7 @@ nav a {
 .container-group {
     display: flex;
     flex-direction: row;
-    gap: 16px;
+    gap: 12px;
 }
 
 .container-icons {
@@ -474,25 +474,27 @@ body .change-theme {
     margin-right: 10px;
 }
 
-.material-symbols-outlined::before {
-    font-family: 'Material Symbols Outlined';
-    font-weight: normal;
-    font-style: normal;
-    font-size: 22px;
-    display: inline-block;
+.icon {
+    transition: transform 0.3s ease, color 0.3s ease;
+    cursor: pointer;
+    color: #ffffff;
+    opacity: 75%;
 }
 
-.material-symbols-outlined-headset_mic::before {
-    content: 'headset_mic';
+.icon:hover {
+    transform: scale(1.2);
+    color: var(--highlight);
 }
 
-.material-symbols-outlined-notifications::before {
-    content: 'notifications';
+.icon:focus {
+    color:var(--highlight) ;
 }
 
-.material-symbols-outlined-featured_seasonal_and_gifts::before {
-    content: 'featured_seasonal_and_gifts';
+.icon.selected {
+    transform: scale(1.1);
+    color: var(--highlight);
 }
+
 
 .header {
     width: 100%;
@@ -557,6 +559,7 @@ body .change-theme {
     }
 
     .menu-conta {
+        gap:8px;
         margin-right: 8px;
     }
 
@@ -873,6 +876,21 @@ body .change-theme {
 @media screen and (min-width: 1366px) and (max-width: 1400px) {
     .container-group{
         margin-left: 20px;
+    }
+}
+
+@media only screen and (max-width: 440px){
+    .menu-conta {
+        gap:4px;
+        margin-right: 4px;
+    }
+
+    .container-icons{
+        gap: 4px;
+    }
+
+    .container-group {
+        gap: 8px;
     }
 }
 
