Fix: mensagens de erro não aparecendo no modal de cadastro

--- a/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.html
+++ b/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.html
@@ -231,7 +231,7 @@
 </div>
 
 <ng-template #registerErrorTemplate>
-    <div class="col-12" *ngIf="errorMessage">
+    <div class="col-12" *ngIf="errorMessage" style="margin-top: 10px;">
         <div class="alert alert-danger">
             {{errorMessage}}
         </div>
