feat ajustes calendário na tela de apuracao e movimentações

--- a/src/app/cambistas/apuracao/apuracao.component.html
+++ b/src/app/cambistas/apuracao/apuracao.component.html
@@ -38,7 +38,7 @@
                             </span>
                         </ng-template>
                         <div class="input-group datepicker-group">
-                            <i class="fa fa-calendar"></i>
+                            <i class="fa fa-calendar" (click)="datepicker.toggle()"></i>
                             <input
                                 type="text"
                                 class="form-control inverted-out"
