--- a/src/app/clientes/apostas-cliente/apostas-cliente.component.css
+++ b/src/app/clientes/apostas-cliente/apostas-cliente.component.css
@@ -151,6 +151,14 @@
     cursor: pointer;
 }
 
+div.info-colunm{
+    display: grid;
+    grid-template-columns: 300px 1fr;
+}
+div.info-colunm div.info-resultado{
+    display: inline !important;
+}
+
 .btnClose {
     font-size: 32px;
     line-height: 32px;
@@ -230,3 +238,12 @@
     }
 }
 
+@media only screen and (max-width: 600px) {
+    div.info-colunm{
+        display: block !important;
+        padding: 10px 0;
+    }
+    div.spacing{
+        display: none;
+    }
+}
