--- a/src/app/clientes/apostas-cliente/apostas-cliente.component.html
+++ b/src/app/clientes/apostas-cliente/apostas-cliente.component.html
@@ -69,18 +69,46 @@
                         <button class="btn btn-custom" type="submit">{{'geral.filtrar' | translate}}</button>
                     </div>
                 </form>
-
-                <div class="info-resultado">
-                    <div class="item">
-                        <label>{{'geral.qtdApostas' | translate}}:</label> {{ apostas.length }}
+                <ng-container *ngIf="!totais.valorBonus || totais.premioBonus else showInfoWithBonus;">
+                    <div class="info-resultado">
+                        <div class="item">
+                            <label>{{'geral.qtdApostas' | translate}}:</label> {{ apostas.length }}
+                        </div>
+                        <div class="item">
+                            <label>{{'geral.totalApostado' | translate}}:</label> {{ totais.valor | currency }}
+                        </div>
+                        <div class="item">
+                            <label>{{'geral.totalPremios' | translate}}:</label> {{ totais.premio | currency }}
+                        </div>
                     </div>
-                    <div class="item">
-                        <label>{{'geral.totalApostado' | translate}} :</label> {{ totais.valor | currency }}
+                </ng-container>
+                <ng-template #showInfoWithBonus>
+                    <div class="info-colunm">
+                        <div class="info-resultado">
+                            <div class="item">
+                                <label>{{'geral.qtdApostas' | translate}}: </label> {{ apostas.length }}
+                            </div>
+                            <div class="item">
+                                <label>{{'geral.totalApostado' | translate}} (Real):</label> {{ totais.valor | currency }}
+                            </div>
+                            <div class="item">
+                                <label>{{'geral.totalPremios' | translate}} (Real):</label> {{ totais.premio | currency }}
+                            </div>
+                        </div>
+                        <div class="info-resultado">
+                            <div class="item spacing" style="color: transparent;">
+                                <label>-</label> 
+                            </div>
+                            <div class="item">
+                                <label>{{'geral.totalApostado' | translate}} ({{'geral.bonus' | translate}}):</label> {{ totais.valorBonus | currency }}
+                            </div>
+                            <div class="item">
+                                <label>{{'geral.totalPremios' | translate}} ({{'geral.bonus' | translate}}):</label> {{ totais.premioBonus | currency }}
+                            </div>
+                        </div>
                     </div>
-                    <div class="item">
-                        <label>{{'geral.totalPremios' | translate}}:</label> {{ totais.premio | currency }}
-                    </div>
-                </div>
+                    
+                </ng-template>
 
                 <div class="table-responsive">
                     <table class="table">
@@ -108,8 +136,8 @@
                             <td>{{ aposta.valor | currency}}</td>
                             <td>{{ aposta.premio | currency }}</td>
                             <td>
-                                <div *ngIf="aposta.rollover_status == 'cancelado'">Bônus Cancelado</div>
-                                <div *ngIf="aposta.resultado == null && aposta.rollover_status != 'cancelado'">Aguardando</div>
+                                <div *ngIf="aposta.rollover_status == 'cancelado'"><th>{{'geral.bonusCancelado' | translate}}</th></div>
+                                <div *ngIf="aposta.resultado == null && aposta.rollover_status != 'cancelado'"><th>{{'geral.aguardando' | translate}}</th></div>
                                 <div *ngIf="aposta.rollover_status != 'cancelado' && aposta.resultado != null">{{aposta.resultado}}</div>
                             </td>
                             <td class="acoes-aposta" *ngIf="tabSelected !== 'cassino' && tabSelected !== 'loteria-popular'">
